double border fixed

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -362,7 +362,7 @@ footer a img {
   .duck-count{
     grid-column: 1/2;
     grid-row: 2/3;
-    border-top: 2px solid #DD5F32;
+    /* border-top: 2px solid #DD5F32; */
     /* margin: 3em 1em; */
     padding-bottom: 30vw;
 
